--- a/Covid-19/appsettings.json
+++ b/Covid-19/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CovidContext": "Server=DESKTOP-HNNBSRT;Database=Covid19;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CovidContext": "Server={ServerName};Database=Covid19;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
